plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'org.novinomad'
version = '2.0.0'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.7.2'
    implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.2.1'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.h2database:h2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.32'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3'
    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.5'

    implementation group: 'com.github.ben-manes.caffeine', name: 'guava', version: '3.1.2'

    // frontend
    implementation group: 'org.webjars', name: 'webjars-locator', version: '0.45'
    implementation group: 'org.webjars', name: 'datatables', version: '1.11.4'
    implementation group: 'org.webjars', name: 'font-awesome', version: '6.1.2'
    implementation group: 'org.webjars', name: 'bootstrap', version: '4.6.2'
    implementation group: 'org.webjars.npm', name: 'chart.js', version: '3.8.0'
    implementation group: 'org.webjars', name: 'jquery', version: '3.6.1'
    implementation group: 'org.webjars', name: 'jquery-easing', version: '1.4.1'
    implementation group: 'org.webjars.npm', name: 'sweetalert2', version: '11.4.14'
    implementation group: 'org.webjars', name: 'bootstrap-daterangepicker', version: '3.1'
    implementation group: 'org.webjars.npm', name: 'vis-network', version: '9.1.2'

    implementation('org.webjars.bower:bootstrap-select:1.13.11') {
        exclude group: 'org.webjars.bower', module: 'bootstrap'
        exclude group: 'org.webjars.bower', module: 'jquery'
        exclude group: 'org.webjars', module: 'jquery'
    }

    implementation('org.webjars:select2:4.0.13') {
        exclude group: 'org.webjars.bower', module: 'jquery'
        exclude group: 'org.webjars', module: 'jquery'
    }

    compileOnly 'org.projectlombok:lombok'

    runtimeOnly 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'mysql:mysql-connector-java'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

task stage(dependsOn: ['clean', 'bootJar'])
bootJar.mustRunAfter clean

jar {
    manifest {
        attributes(
                'Main-Class': 'org.novinomad.picasso.PicassoApplication'
        )
    }
    archiveName('picasso.jar')
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

bootJar {
    archiveFileName = 'picasso.jar'
}